GeneWeb version 3.04
--------------------

* Languages
  - [06 Apr 00] Added Afrikaans (Louis Kruger).

* GeneWeb Service/CGI (gwd)
  - [03 Apr 00] In ancestor page, added horizontal displaying.
  - [02 Apr 00] In surname page, added ability to click on a branch number
    to display only that one.
  - [27 Mar, 05 Apr 00] Added displaying of places/surnames from welcome page.

* Gedcom to GeneWeb (ged2gwb)
  - [31 Mar 00] Do not enter any more GIVN as public name if equal to first
    name nor SURN as surname alias if equal to surname.

* GeneWeb uncompiler (gwu) and GeneWeb to gedcom (gwb2ged)
  - [04 Apr 00] Added option "-nn" not to save data base notes.

* Base configuration files (base.gwf)
  - [31 Mar 00] Added variable "places_inverted" (default no) to specify that
    places are ordered more-general-less-general (e.g. "USA, New York"
    instead of "New York, USA"). Important to specify correcty this variable
    for the new displaying by places/surnames.

GeneWeb version 3.03
--------------------

* Languages
  - [23 Jan 00] Added Russian (Konstantin Abakumov).

* Setup program (gwsetup)
  - [07 Feb 00] Changed some Swedish files (Lars Gustavsson).
  - [27 Jan 00; 03 Feb 00] Added a comment in the introduction text
    telling not to delete the window! (English, French, Swedish versions)

* GeneWeb Service/CGI (gwd)
  - [17 Mar 00] In CGI mode, the passwords are no more visible in the URL.
    Technical explanation: it works with a generated random login password
    with a timeout of 1800 seconds (half an hour), i.e. if you do nothing
    during half an hour, the login password is unactivated; this limit time is
    changeable by a new gwd option "-login_tmout". Note: this system does
    not use cookies.
  - [12 Mar 00] In ancestors page, added male and female lines.
  - [11 Mar 00] In personal pages, the images defined by external URL (i.e.
    accomodated in other Web sites) are now reduced as are local images.